--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>this is a test of pull request</h1>
+    <p>
+        this is a simple paragraph
+    </p>
 </body>
 </html>
